--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  color: #fefefeb3;
+}
+
+body {
+  min-height: 100vh;
+  background: radial-gradient(circle, rgba(36, 221, 214, 0.6537585421412301) 0%, rgba(30, 29, 253, 1) 50%, rgba(190, 69, 252, 1) 100%);
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.btn {
+  outline: none;
+  border: none;
+  color: #fefefeb3;
+  background: transparent;
+  font-size: 1.2rem;
+  padding: 1rem 4rem;
+  text-align: center;
+  box-shadow: 1px 2px 10px #fefefeb3;
+  border-radius: 50px;
+  cursor: pointer;
+  background: transparent;
+  scale: 1;
+  transition: all .3s ease-in-out;
+}
+
+.btn:hover {
+  background: rgba(30, 29, 253, 1);
+  color: #fff;
+  scale: 1.05;
+  translate: 0 -10px;
+}
+
+li {
+  opacity: 0;
+  animation: fadeInButton .8s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .4s;
+}
+
+
+.container {
+  width: 95%;
+  margin-inline: auto;
+  max-width: 1700px;
+  min-height: 100vh;
+  margin-block: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+::placeholder {
+  color: #fefefeb3;
+}
+
+img {
+  scale: 1;
+  transition: all .3s ease-in-out;
+}
+
+img:hover {
+  scale: 1.1;
+}
+
+img.home-logo {
+  animation: fadeInLogo .8s ease-in-out;
+}
+
+input.error{
+  box-shadow: 1px 2px 7px rgba(255, 0, 98, 0.612);
+  transition: all .3s ease-in-out;
+}
+
+input.error::placeholder {
+  color: rgba(255, 0, 98, 0.612);
+}
+
+
+
+@keyframes fadeInLogo {
+  0% {
+    opacity: 0;
+    scale: 0.4;
+    translate: -80% 0;
+  }
+
+  100% {
+    opacity: 1;
+    scale: 1;
+    translate: 0 0;
+  }
+}
+
+@keyframes fadeInButton {
+  0% {
+    opacity: 0;
+    scale: 0;
+    translate: 80% 0;
+  }
+
+  100% {
+    opacity: 1;
+    scale: 1;
+    translate: 0 0;
+  }
+}
+
+@media screen and (max-width: 600px){
+
+  input,
+  ::placeholder,
+  button,
+  .btn,
+  a {
+    font-size: .8rem;
+  }
+
+  button, .btn {
+    padding: .7rem 2.4rem;
+  }
+
+  li {
+    margin-bottom: 2rem;
+  }
+
+  .container {
+    padding-block: 0.5rem;
+  }
 }
