--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Space Grotesk', sans-serif;
+  /*font-family: 'Space Grotesk', sans-serif;*/
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
