--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /*font-family: 'Space Grotesk', sans-serif;*/
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 a {
